--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview" ,
+    "host": "vite --host"
+   
+     
+    
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,4 +31,5 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.0"
   }
+   
 }
